--- a/03-unsupervised.qmd
+++ b/03-unsupervised.qmd
@@ -1,8 +1,11 @@
 ---
 title: Unsupervised Learning
 jupyter: python3
-ipynb-shell-interactivity: all
+execute:
+  cache: true
 ---
+
+## Introduction
 
 Suppose that we have a set of $N$ observations $(x_1, x_2, \ldots, x_N)$ of a
 random $p$-vector $X$. The goal in unsupervised learning is to infer properties
@@ -20,7 +23,32 @@ large, to :
 2.  Identify "groups" or clusters within the data for further study.
 3.  Visualise high-dimensional data
 
-## Wine Quality Data
+```{python}
+import pandas as pd
+import numpy as np
+import seaborn as sns
+import matplotlib.pyplot as plt
+import plotly.express as px
+
+from itables import show
+from ind5003 import clust
+import folium
+import geopandas
+
+from sklearn import decomposition, preprocessing
+from sklearn.metrics import pairwise_distances
+from sklearn.manifold import MDS, TSNE
+from sklearn.ensemble import IsolationForest
+
+from scipy.cluster import hierarchy
+
+from sentence_transformers import SentenceTransformer
+```
+
+::: {#exm-wine-quality-1 style="background-color: #D5D1D164; padding: 20px"}
+
+### Wine Quality Data
+\index{Wine quality!Description}
 
 The UCI Machine Learning Repository contains a 
 [dataset on Wine Quality](https://archive.ics.uci.edu/dataset/186/wine+quality). 
@@ -48,34 +76,14 @@ unsupervised learning techniques. To do so, we shall ignore the column
 corresponding to quality in most sections until the end, when we try to
 interpret the findings.
 
-```{python}
-import pandas as pd
-import numpy as np
-import seaborn as sns
-import matplotlib.pyplot as plt
-import plotly.express as px
-
-from itables import show
-from ind5003 import clust
-import folium
-import geopandas
-
-from sklearn import decomposition, preprocessing
-from sklearn.metrics import pairwise_distances
-from sklearn.manifold import MDS, TSNE
-from sklearn.ensemble import IsolationForest
-
-from scipy.cluster import hierarchy
-
-from sentence_transformers import SentenceTransformer
-```
-
 Our first step is to read in the two tables and combine them into one.
 
 ```{python}
-wine_red = pd.read_csv("data/wine+quality/winequality-red.csv", delimiter=";" )
+wine_red = pd.read_csv("data/wine+quality/winequality-red.csv", 
+                       delimiter=";" )
 wine_red['type'] = "red"
-wine_white = pd.read_csv("data/wine+quality/winequality-white.csv", delimiter=";")
+wine_white = pd.read_csv("data/wine+quality/winequality-white.csv", 
+                         delimiter=";")
 wine_white['type'] = "white"
 
 # remove spaces in column names:
@@ -86,15 +94,27 @@ wine2 = pd.concat([wine_red, wine_white], ignore_index=True)
 wine2.columns = col_names
 ```
 
-```{python}
-show(wine2.head(100))
-```
+Here is a brief overview of the data.
 
-# Techniques
+::: {.content-visible when-format="html"}
+```{python}
+show(wine2.head(20))
+```
+:::
+
+::: {.content-visible when-format="pdf"}
+```{python}
+print(wine2.head())
+```
+:::
+
+:::
 
 ## Principal Components Analysis
 
-A Principal Components Analysis (PCA) explains the covariance matrix of a set of variables through a few *linear combinations* of these variables. The general objectives are 
+A Principal Components Analysis (PCA) explains the covariance matrix of a set of
+variables through a few *linear combinations* of these variables. The general
+objectives are
 
 1. data reduction, into features that are uncorrelated with one another,
 2. interpretation, and
@@ -102,7 +122,8 @@ A Principal Components Analysis (PCA) explains the covariance matrix of a set of
 
 ### Formal Set-up
 
-Suppose that we have $N$ observations of a random vector of length $p$. We can represent these values in a matrix with $N$ rows and $p$ columns:
+Suppose that we have $N$ observations of a random vector of length $p$. We can
+represent these values in a matrix with $N$ rows and $p$ columns:
 
 $$
 \mathbf{X}_{N\times p} = 
@@ -113,8 +134,9 @@ x_{N,1} & x_{N,2} & \ldots & x_{N,p}
 \end{bmatrix}
 $$
 
-Let $\mathbf{x}_j = \begin{bmatrix} x_{1,j} & x_{2,j} & \cdots & x_{N,j} \end{bmatrix}^T$ correspond to column $j$ in $\mathbf{X}$, for $j=1,\ldots,p$. We 
-represent the mean of column $j$ with
+Let $\mathbf{x}_j = \begin{bmatrix} x_{1,j} & x_{2,j} & \cdots & x_{N,j} \end{bmatrix}^T$ 
+correspond to column $j$ in $\mathbf{X}$, for $j=1,\ldots,p$. We represent the
+mean of column $j$ with
 
 $$
 \bar{x}_j = \frac{1}{N} \sum_{i=1}^N x_{i,j}
@@ -150,7 +172,9 @@ However this does not help us much! We have not achieved any reduction!?
 The value of PCA comes from the possibility that the *first few* principal components usually explain most of the variability in the data 
 ($\sum_i^p s^2_i$). The last few principal components typically explain little of the variability in the data. Indeed, there is some loss of information when we drop them, but the benefit is that we can (hopefully) focus on much fewer dimensions than the original $p$ (which could be in the hundreds, even). Moreover, as these components will be uncorrelated by design, they can be used as features to solve any issues of multicollinearity in our data.
 
+::: {#exm-wine-quality-2 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: PCA on Wine Dataset
+\index{Wine quality!PCA}
 
 While it is possible to extract principal components using either the covariance
 matrix or the correlation matrix, using the latter avoids situations where the
@@ -168,6 +192,8 @@ It is theoretically possible to extract 11 components from this $X$ matrix. Let
 us proceed with that, and assess how many we should keep using a *scree* plot.
 
 ```{python}
+#| fig-align: center
+#| 
 pca_full = decomposition.PCA(n_components=11)
 pca_full.fit(X_scaled)
 ```
@@ -188,6 +214,8 @@ plt.xlabel('Principal Component')
 plt.ylabel('Variance Explained');
 ```
 
+To find the amount of total variance explained, we can use the following command:
+
 ```{python}
 pca_full.explained_variance_ratio_.cumsum()
 ```
@@ -201,7 +229,9 @@ matrix.
 pca = decomposition.PCA(n_components=5)
 pca.fit(X_scaled)
 loadings = pca.components_.T * np.sqrt(pca.explained_variance_)
-loading_matrix = pd.DataFrame(loadings, columns=['PC' + str(x+1) for x in range(0, 5)], index=col_names[:-2])
+loading_matrix = pd.DataFrame(loadings, 
+                              columns=['PC' + str(x+1) for x in range(0, 5)], 
+                              index=col_names[:-2])
 ```
 
 In social sciences especially, it is a convention to drop loadings that are
@@ -211,7 +241,8 @@ coefficients as well as possible.
 ```{python}
 loading_matrix2 = loading_matrix.copy()
 loading_matrix2[loading_matrix.abs()  < 0.300] = 0.00
-loading_matrix2.round(3).style.background_gradient(cmap='coolwarm_r', vmin=-1, vmax=1)
+loading_matrix2.round(3).style.background_gradient(cmap='coolwarm_r', 
+                                                   vmin=-1, vmax=1)
 ```
 
 From above, if we focus on the top two principal components, we could interpret them as:
@@ -224,13 +255,13 @@ In the following code, we **apply** the transformation to obtain the actual
 principal components ($\mathbf{y}_j$'s).
 
 ```{python}
-X_transformed = pca.transform(X_scaled)
-X_transformed_df = pd.DataFrame(X_transformed, columns=['PC1', 'PC2', 'PC3', 'PC4', 'PC5'])
-X_transformed_df[['quality', 'type']] = wine2[['quality', 'type']]
-```
+#| fig-align: center
 
-```{python}
-#| scrolled: true
+X_transformed = pca.transform(X_scaled)
+X_transformed_df = pd.DataFrame(X_transformed, 
+                                columns=['PC1', 'PC2', 'PC3', 'PC4', 'PC5'])
+X_transformed_df[['quality', 'type']] = wine2[['quality', 'type']]
+
 sns.relplot(data=X_transformed_df, x='PC1', y='PC2', col='quality', col_wrap= 3, 
             hue='type', marker='o', alpha=0.3, height=3, aspect=1.2);
 ```
@@ -245,6 +276,8 @@ values do not appear to suggest what the PC2 values could be.
 
 Finally, neither PC1 nor PC2 appears to provide a clue on the the subjective
 quality of the wine.
+
+:::
 
 ## Clustering
 
@@ -343,23 +376,24 @@ input. The final number of clusters can be based on a visualisation of this
 hierarchy of clusterings, through a dendrogram.
 
 ```{python}
+#| fig-align: center
 X = np.array([[.25,.7], [.3, .8], [.7, .6]])
 fc_dict={'Stage 0': ['red', 'blue', 'green'], 'Stage 1':['red', 'red', 'green'], 
         'Stage 2':['red']*3}
 
 plt.figure(figsize=(10, 3))
 for x,y in enumerate(fc_dict.items()):
-    plt.subplot(1,3,x+1)
+    plt.subplot(1,3,x+1);
     plt.scatter(X[:,0], X[:,1], facecolor=y[1]);
-    plt.ylim(0.2,1); plt.xlim(0,1)
-    #plt.grid(); 
-    plt.title(y[0])
+    plt.ylim(0.2,1); plt.xlim(0,1);
+    plt.title(y[0]);
 ```
 
 As we can see the number of clusters changed from 3 to 2 and then to 1. Here is
 how we can visualise the hierarchy:
 
 ```{python}
+#| fig-align: center
 lm0 = hierarchy.linkage(X)
 hierarchy.dendrogram(lm0,p=2)
 plt.title('A Dendrogram');
@@ -372,16 +406,22 @@ line on the left). This shows that points 0 and 1 are less dissimilar to one
 another than they are (as a group) to point 2. In other words, the 
 *height of each node is proportional to the value of the intergroup dissimilarity between its two child nodes*.
 
+::: {#exm-wine-quality-2 style="background-color: #D5D1D164; padding: 20px"}
+
 ### Example: Hierarchical Clustering of Wine 
+\index{Wine quality!Hierarchical clustering}
 
 Now we apply this technique to the scaled wine dataset.
 
 ```{python}
+#| fig-align: center
 hc1 = hierarchy.linkage(X_transformed_df.iloc[:, :-2], method='ward')
 
 plt.figure(figsize=(12,4))
 hierarchy.dendrogram(hc1, p=4, truncate_mode='level');
 ```
+
+:::
 
 From the dendrogram alone, it appears plausible that we can break the original
 set of data points into two, maybe 3, groups.
@@ -406,7 +446,15 @@ is not a part of. On the other hand, $a$ is the mean distance within a cluster.
 This coefficient takes values between -1 and 1, with values closer to 1
 indicating a more optimal clustering.
 
+::: {#exm-wine-quality-3 style="background-color: #D5D1D164; padding: 20px"}
+
+### Example: Clustering Quality
+\index{Wine quality!Silhouette}
+
+Here are the silhouette scores from the two clusterings of the wine data.
+
 ```{python}
+#| output: false
 out = hierarchy.cut_tree(hc1, n_clusters=3).ravel() 
 X_transformed_df['groups'] = out
 
@@ -417,20 +465,20 @@ The silhouette coefficient values we are obtaining are not very good. However,
 out of the possible values we tried, $K=2$ seems to be the best.
 
 ```{python}
+#| fig-align: center
 out = hierarchy.cut_tree(hc1, n_clusters=2).ravel() 
 X_transformed_df['groups'] = out
-```
 
-```{python}
 sns.relplot(data=X_transformed_df, x='PC1', y='PC2', col='groups', 
             hue='type', marker='o', alpha=0.3, height=3, aspect=1.2);
 ```
+
+As we can see, the groupings closely mirror the type of wine (red or white).
 
 ```{python}
 wine2.type.groupby(X_transformed_df.groups).describe()
 ```
 
-As we can see, the groupings closely mirror the type of wine (red or white).
 However, notice that there are a number of white wines grouped as 0 (with most
 of the other reds). It would be interesting to study what qualities of these
 wines led to them being grouped with the reds.
@@ -438,6 +486,8 @@ wines led to them being grouped with the reds.
 Also, consider what value the PCA brought to this problem. Go back and re-run
 the clustering algorithm with the scaled but untransformed data. Does the
 quality of clustering differ?
+
+:::
 
 ## Outlier Detection
 
@@ -456,23 +506,26 @@ shorter paths for anomalies. Hence, when a forest of random trees collectively
 produce shorter path lengths for particular samples, they are highly likely to
 be anomalies.
 
+::: {#exm-taiwan-isol-1 style="background-color: #D5D1D164; padding: 20px"}
+
 ### Example: Isolation Forest with Taiwan Dataset
+\index{Taiwan Data!Isolation forest}
 
 Let us apply this technique to the Taiwan real estate dataset from the
 regression topic.
 
 ```{python}
 re2 = pd.read_csv("data/taiwan_dataset.csv")
-```
-
-```{python}
 X_re = re2.loc[:, ['trans_date', 'house_age', 'dist_MRT', 'num_stores', 
                    'Xs', 'Ys', 'price']]
 X_re_scaled = preprocessing.StandardScaler().fit_transform(X_re)
 ```
 
+After reading in and scaling the data, we fit the `IsolationForest` estimator.
+
 ```{python}
-clf = IsolationForest(max_samples=300, max_features=2, contamination=0.01, random_state=503)
+clf = IsolationForest(max_samples=300, max_features=2, contamination=0.01, 
+                      random_state=503)
 clf.fit(X_re_scaled)
 ```
 
@@ -483,9 +536,6 @@ from the original dataset for each base estimator.
 
 ```{python}
 id_outliers = pd.Series(clf.predict(X_re_scaled))
-```
-
-```{python}
 id_outliers.value_counts()
 ```
 
@@ -495,17 +545,30 @@ features, led to this.
 
 ```{python}
 re2['outliers'] = id_outliers
+```
+
+::: {.content-visible when-format="html"}
+```{python}
 show(re2[['house_age', 'dist_MRT', 'num_stores', 'price', 
           'Xs', 'Ys']].groupby(re2.outliers).describe().T)
 ```
+:::
+
+::: {.content-visible when-format="pdf"}
+```{python}
+print(re2[['house_age', 'dist_MRT', 'num_stores', 'price', 
+          'Xs', 'Ys']].groupby(re2.outliers).describe())
+```
+:::
 
 Here is the same map of the data points, but with colours to code the outlier
 points.
 
+::: {.content-visible when-format="html"}
 ```{python}
+#| fig-align: center
 #| scrolled: true
 m = folium.Map(location=(45.5236, -122.6750))
-#df1 = geopandas.read_file('../data/taiwan_dataset.csv')
 gdf = geopandas.GeoDataFrame(
     re2, geometry=geopandas.points_from_xy(re2.X, re2.Y), crs="EPSG:3825"
 )
@@ -515,6 +578,10 @@ gdf.explore("outliers", tiles="CartoDB positron",
             marker_kwds = {"radius": 50, "fill": True}, 
             legend_kwds = {"caption": "Price"})
 ```
+:::
+
+
+:::
 
 ::: {.callout-note}
 
@@ -523,9 +590,9 @@ outliers?
 
 :::
 
-# Visualisation
+## Visualisation
 
-## MDS
+### MDS
 
 Multidimensional Scaling is another technique for visualising high-dimensional
 data. Just like in hierarchical clustering, we begin with a
@@ -545,17 +612,30 @@ MDS is *not* the same as Principal Component Analysis (PCA):
 * Principal components are ordered; MDS are not.
 * Principal components are linear combinations of the original vectors; MDS output is not.
 
-The goal of MDS is to find a lower dimensional set of vectors whose pairwise Euclidean distances are as close as possible to the dissimilarity matrix of the original vectors.
+The goal of MDS is to find a lower dimensional set of vectors whose pairwise
+Euclidean distances are as close as possible to the dissimilarity matrix of the
+original vectors.
 
+::: {#exm-disease-mds-1 style="background-color: #D5D1D164; padding: 20px"}
 ### Example: MDS on Disease Symptoms
+\index{Disease Symptoms!Description}
 
-The dataset `disease.csv` contains a list of symptoms that were reported for a set diseases. Each row in the dataframe corresponds to a particular 
-disease, while each binary column indicates whether that particular symptom was frequently present for this disease.
+The dataset `disease.csv` contains a list of symptoms that were reported for a
+set diseases. Each row in the dataframe corresponds to a particular disease,
+while each binary column indicates whether that particular symptom was
+frequently present for this disease.
 
 ```{python}
 disease = pd.read_csv("data/disease.csv")
+```
+
+::: {.content-visible when-format="html"}
+```{python}
 show(disease)
 ```
+:::
+
+:::
 
 Our goal is to visualise the 41 diseases - diseases with "similar" symptoms
 should be plotted "close" to one another. However, the data begets the natural
@@ -588,7 +668,6 @@ disease['symptom_text'] = symptom_text
 
 # pdist2 is 41x41
 pdist2 = pairwise_distances(X!=0, metric='jaccard')
-
 disease.loc[disease.disease.isin(['GERD', 'Heart attack']), 'symptom_text'].to_list()
 ```
 
@@ -602,35 +681,29 @@ Now we turn to the MDS transformation.
 
 ```{python}
 #| scrolled: true
-embedding = MDS(n_components=2, normalized_stress='auto', dissimilarity='precomputed', random_state=42, max_iter=500, verbose=0)
+#| fig-align: center
+embedding = MDS(n_components=2, normalized_stress='auto', dissimilarity='precomputed',
+                random_state=42, max_iter=500, verbose=0)
 X_transformed = embedding.fit_transform(pdist2)
-#X_transformed.shape
-```
-
-```{python}
 X_transformed_df = pd.DataFrame(X_transformed, columns=['X', 'Y'])
-
 X_transformed_df['disease'] = disease_names
 
 fig = px.scatter(X_transformed_df, x='X', y='Y', text='disease', hover_name=symptom_text,
                  width=1024, height=960)
 fig.update_traces(textposition='top center')
-fig.show()
+#fig.show()
 ```
 
-To verify if the plot makes intuitive sense, we should inspect the points that occur nearby to one another.
+To verify if the plot makes intuitive sense, we should inspect the points that
+occur nearby to one another. Here are some example codes we can use:
 
 ```{python}
 disease.loc[disease.disease.isin(['Typhoid', 'Dengue', 'Malaria']),
             'symptom_text'].to_list()
-```
-
-```{python}
-disease.loc[disease.disease.isin(['Common Cold', 'Pneumonia', 'Bronchial asthma']), 'symptom_text'].to_list()
-```
-
-```{python}
-disease.loc[disease.disease.isin(['GERD', 'Heart attack', 'Drug reaction']), 'symptom_text'].to_list()
+# disease.loc[disease.disease.isin(['Common Cold', 'Pneumonia', 'Bronchial asthma']), 
+#              'symptom_text'].to_list()
+# disease.loc[disease.disease.isin(['GERD', 'Heart attack', 'Drug reaction']),
+#             'symptom_text'].to_list()
 ```
 
 It is important to remember that above, we requested the MDS algorithm to return
@@ -649,8 +722,18 @@ Stay away from non-interactive 3d plots!
 
 :::
 
+::: {.content-visible when-format="html"}
+
+::: {#exm-disease-mds-2 style="background-color: #D5D1D164; padding: 20px"}
+### Example: Disease Symptoms 3D-plot
+\index{Disease Symptoms!Description}
+
+Here is the 3-D version of the earlier plot:
+
 ```{python}
-embedding3 = MDS(n_components=3, normalized_stress='auto', dissimilarity='precomputed', random_state=42, max_iter=500, verbose=0)
+#| fig-align: center
+embedding3 = MDS(n_components=3, normalized_stress='auto', dissimilarity='precomputed',  
+                 random_state=42, max_iter=500, verbose=0)
 X_transformed3 = embedding3.fit_transform(pdist2)
 X_transformed3_df = pd.DataFrame(X_transformed3, columns=['X', 'Y', 'Z'])
 X_transformed3_df['disease'] = disease_names
@@ -660,20 +743,26 @@ fig = px.scatter_3d(X_transformed3_df, x='X', y='Y', z='Z', text='disease',
 fig.show()
 ```
 
-## t-SNE
+:::
 
-t-SNE is an fast, iterative algorithm for *visualising* high-dimensional data. 
+:::
 
-Once again, suppose we have $N$ *data points* $x_i \in \mathbf{R}^p$. We would like to choose $N$ 
-*map points* $y_i \in \mathbf{R}^2$ to represent them. Here is how the algorithm works:
+### t-SNE
+
+t-SNE is an fast, iterative algorithm for *visualising* high-dimensional data.
+
+Once again, suppose we have $N$ *data points* $x_i \in \mathbf{R}^p$. We would
+like to choose $N$ *map points* $y_i \in \mathbf{R}^2$ to represent them. Here is 
+how the algorithm works:
 
 1. Compute pairwise similarity between the *data points*, using a Gaussian (Normal) kernel.
 2. Iteratively update *map points* so that their pairwise similarity is as close as
    possible to the original data points.
 
-The innovation of these algorithm is that the similarity between map points is computed using a $t$-distribution instead of Gaussian. The 
-$t$-distribution has fatter tails than the Normal. This ensures that data points that are not close in $\mathbf{R}^D$ are pushed apart 
-in the map points space.
+The innovation of these algorithm is that the similarity between map points is
+computed using a $t$-distribution instead of Gaussian. The $t$-distribution has
+fatter tails than the Normal. This ensures that data points that are not close
+in $\mathbf{R}^D$ are pushed apart in the map points space.
 
 There are a couple of important parameters in this algorithm.
 
@@ -685,8 +774,9 @@ There are a couple of important parameters in this algorithm.
    measured using Kullback-Leibler Divergence. When this no longer drops quickly, we can
    stop the t-SNE algorithm.
 
-Although you will find t-SNE used in many analyses, you should be aware of certain caveats when using it. Please take a look at the link 
-in the references for plots that expound on the following points.
+Although you will find t-SNE used in many analyses, you should be aware of
+certain caveats when using it. Please take a look at the link in the references
+for plots that expound on the following points.
 
 1. t-SNE is for visualisation and exploration, not for clustering.
 2. Distances in the map space are not reflective of true distances between datapoints.
@@ -694,29 +784,35 @@ in the references for plots that expound on the following points.
 4. In the map space, distances between clusters (between far-away points) might not mean much (unlike MDS).
 5. Make sure you try with different perplexity values, and check that the algorithm has converged.
    
-### Example: t-SNE with Twitter Dataset
+::: {#exm-twitter-tsne-1 style="background-color: #D5D1D164; padding: 20px"}
+### Example: Twitter Dataset
+\index{Twitter!Description}
 
-The [UCI Machine Learning repository](https://archive.ics.uci.edu/dataset/438/health+news+in+twitter) contains tweets pertaining to health news from more than 15 major news agencies in 2015. In this example, we are going to encode each BBC tweet in to a numerical vector of length 384. Then we are going to visualise it using t-SNE.
+The [UCI Machine Learning repository](https://archive.ics.uci.edu/dataset/438/health+news+in+twitter)
+contains tweets pertaining to health news from more than 15 major news agencies
+in 2015. In this example, we are going to encode each BBC tweet in to a
+numerical vector of length 384. Then we are going to visualise it using t-SNE.
 
 ```{python}
-#| eval: false
 model = SentenceTransformer('sentence-transformers/all-MiniLM-L12-v2')
-
 #sentences = ["This is an example sentence. can we move on?", "Each sentence is converted"]
 #embeddings = model.encode(sentences)
 #embeddings.shape
 ```
 
 ```{python}
-bbchealth_df = pd.read_table('data/health+news+in+twitter/Health-Tweets/bbchealth.txt', delimiter='|', names=['id', 'datetime', 'tweet'])
+bbchealth_df = pd.read_table('data/health+news+in+twitter/Health-Tweets/bbchealth.txt', 
+                             delimiter='|', names=['id', 'datetime', 'tweet'])
 bbchealth_tweets = bbchealth_df.tweet
 print(bbchealth_tweets[10])
 ```
 
-Above, we have an example of a tweet. We are going to strip off the URL at the end before encoding each (short) sentence.
+:::
+
+Above, we have an example of a tweet. We are going to strip off the URL at the
+end before encoding each (short) sentence.
 
 ```{python}
-#| eval: false
 t1 = bbchealth_tweets.str.replace(' http.*$', '', regex=True)
 t2 = t1.str.replace('^VIDEO:', '', regex=True)
 t2_l = t2.to_list()
@@ -724,15 +820,23 @@ t2_l = t2.to_list()
 embeddings = model.encode(t2_l)
 ```
 
+::: {#exm-twitter-tsne-2 style="background-color: #D5D1D164; padding: 20px"}
+### Example: Twitter Dataset t-SNE Output
+\index{Twitter!t-SNE Output}
+
 ```{python}
 #| scrolled: true
-#| eval: false
-tsne1 = TSNE(n_components=2, init="random", perplexity=10, verbose=0, random_state=43, max_iter=5000)
+tsne1 = TSNE(n_components=2, init="random", perplexity=10, verbose=0, 
+             random_state=43, max_iter=5000)
 X_transformed2 = tsne1.fit_transform(embeddings)
 ```
 
+The plot is only visible in the HTML version of the textbook.
+
+::: {.content-visible when-format="html"}
+
 ```{python}
-#| eval: false
+#| fig-align: center
 df2 = pd.DataFrame(X_transformed2, columns=['x','y'])
 df2['labels'] = t2_l
 
@@ -740,10 +844,13 @@ fig = px.scatter(df2, x='x', y='y', hover_name='labels',
                  width=1024, height=960)
 fig.show()
 ```
+:::
 
-# References
+:::
 
-## Website references
+## References
+
+### Website references
 1. [Clustering performance evaluation](https://scikit-learn.org/stable/modules/clustering.html#clustering-performance-evaluation) There are many
    other ways of assessing what the optimal number of clusters should be.
 3. [More information on isolation forests](https://cran.r-project.org/web/packages/isotree/vignettes/An_Introduction_to_Isolation_Forests.html)
@@ -753,7 +860,7 @@ fig.show()
 7. [DataCamp on t-SNE](https://www.datacamp.com/tutorial/introduction-t-sne): This tutorial consists of a worked-through example on a churn dataset. It
    includes a comparison with PCA.
 
-## Video references
+### Video references
 
 1. [t-SNE, explained by Josh Starmer](https://www.youtube.com/watch?v=NEaUSP4YerM)
 2. [A general video on high-dimensional space](https://www.youtube.com/watch?v=wvsE8jm1GzE): A nice explainer from Google.
