--- a/references.bib
+++ b/references.bib
@@ -15,5 +15,12 @@
   pages = {97–111},
   numpages = {15}
 }
+@book{agresti2012categorical,
+  title={Categorical data analysis},
+  author={Agresti, Alan},
+  volume={792},
+  year={2012},
+  publisher={John Wiley \& Sons}
+}
 
 
